2013-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* TimeSensor.cpp: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Arc2D.cpp:
	* Disk2D.cpp:
	* Circle2D.cpp:
	* ArcClose2D.cpp:
	* Rectangle2D.cpp:
	* TriangleSet2D.cpp: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Selection.h:
	* Selection.cpp:
	* jsSFVec4.h:
	* jsSFVec3.h:
	* jsSFVec2.h: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DRenderer.cpp:
	* BrowserOptions.h:
	* BrowserOptions.cpp: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.h:
	* Text.cpp: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Background.h:
	* Background.cpp:
	* X3DBackgroundNode.h:
	* X3DBackgroundNode.cpp:
	* TextureBackground.cpp: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserContext.cpp:
	* X3DFlyViewer.cpp:
	* Billboard.cpp:
	* OrientationInterpolator.cpp: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Numbers.h:
	* Matrix.h:
	* ViewVolume.h:
	* ViewVolume.cpp:
	* LightContainer.h:
	* X3DBrowserContext.cpp:
	* Viewport.h:
	* X3DFlyViewer.cpp:
	* ExamineViewer.cpp:
	* Viewport.cpp:
	* X3DLayerNode.h:
	* Billboard.cpp:
	* Viewpoint.cpp:
	* OrthoViewpoint.cpp:
	* RenderingProperties.cpp:
	* SphereSensor.cpp:
	* CylinderSensor.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ProximitySensor.h:
	* ProximitySensor.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* jsContext.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Router.cpp:
	* jsContext.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewVolume.h:
	* ViewVolume.cpp:
	* X3DBrowserContext.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard.cpp: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>